--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 							<!-- <img src="img/logo.png" class="img-responsive"> -->
 						</div>
 						<div class="banner-text text-center">
-							<h1 class="white">"Therapy at Your Fingetrips"</h1>
+							<h1 class="white">Therapy at Your Fingetrips</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
 							<a href="#contact" class="btn btn-appoint">Make an Appointment.</a>
 						</div>
